--- a/cardlist.css
+++ b/cardlist.css
@@ -1,15 +1,34 @@
+.imgContainer{
+    width:80%;
+    height: 330px;
+    border-radius: 5px;
+    border:3px solid rgb(252, 249, 249);
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+
 .cardContainer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    
     margin: 0 auto;
-    border:3px solid red;
-    width: 90%;
+   
+    width: 80%;
     height:300px;
 }
 
 #card1,#card2,#card3{
-    border:3px solid green;
-    width:30%;
+    border:3px solid grey;
+    width:33%;
+    margin-right: 8px;
     
+}
+header{
+    font-size: 15px;
+    padding-top: 10px;
+    padding-bottom: 6px;
+    border-bottom: 3px solid rgb(122, 118, 118);
+    width: 90%;
+    margin: 0 auto;
 }
