--- a/cardlist.css
+++ b/cardlist.css
@@ -1,3 +1,4 @@
+
 .imgContainer{
     width:80%;
     height: 330px;
@@ -12,8 +13,9 @@
     flex-direction: row;
     justify-content: space-between;
     
-    margin: 0 auto;
-   
+    margin:0 140px 0 148px;
+    
+    
     width: 80%;
     height:300px;
 }
@@ -22,13 +24,25 @@
     border:3px solid grey;
     width:33%;
     margin-right: 8px;
-    
+    padding:0 18px 0 18px;
 }
-header{
+.cardtitle{
+   
+    font-weight: bold;
+    font-size:15px
+}
+.cardp{
+    padding-top: 15px 0 10px 0;
+    
+
+}
+
+.cardheader{
     font-size: 15px;
     padding-top: 10px;
     padding-bottom: 6px;
     border-bottom: 3px solid rgb(122, 118, 118);
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
+    margin-bottom: 15px;
 }
