--- a/cardlist.css
+++ b/cardlist.css
@@ -46,3 +46,17 @@
     margin: 0 auto;
     margin-bottom: 15px;
 }
+
+.footcontainer{
+    border-top:1px solid rgb(233, 227, 227);
+    width:80%;
+    height: 100px;
+    margin:0 auto;
+    margin-top:10px;
+
+}
+
+.footerp{
+    font-size: 15px;
+    padding-top:10px;
+}
