--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@
     color:royalblue;
     text-decoration: none;
     font-size: 20px;
-    font-family: ;
+    /* font-family: ; */
 }
 
 .social-media {
