--- a/photos.css
+++ b/photos.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items:center;
+    margin-bottom: 50px;
 }
 .foodphotos{
     border:2px solid #e6e0e0;
@@ -14,4 +15,13 @@
     width:90%;
     height: 220px;
     margin:0 0 20px 0;
+      
+}
+
+.phototitle{
+    font-size: 25px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: italic;
+    margin-bottom: 10px;
+    margin-left: -85px;
 }
