--- a/photos.css
+++ b/photos.css
@@ -1,9 +1,9 @@
 .photocontainer{
     
-    width:20%;
+    width:100%;
     height: 1200px;
     position: relative;
-    left:995px;
+    /* left:995px; */
     display: flex;
     flex-direction: column;
     align-items:center;
@@ -12,7 +12,7 @@
 .foodphotos{
     border:2px solid #e6e0e0;
     background-color:#F7F7F7;
-    width:90%;
+    width:100%;
     height: 220px;
     margin:0 0 20px 0;
       
