--- a/cardlist.css
+++ b/cardlist.css
@@ -54,13 +54,13 @@
     margin-bottom: 15px;
 }
 
-.footcontainer{
+.footercontainer{
     border-top:1px solid rgb(233, 227, 227);
-    width:80%;
+    border:3px solid red;
+    width:100%;
     height: 100px;
     margin:0 auto;
     margin-top:10px;
-    
 
 }
 
@@ -76,3 +76,6 @@
     line-height: 25px;
 }
 
+.address a{
+    text-decoration: none;
+}
