--- a/photos.css
+++ b/photos.css
@@ -1,29 +1,25 @@
-.photocontainer{
-    
-    width:90%;
-    height: 1200px;
-    position: relative;
-    /* left:995px; */
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    margin-bottom: 50px;
+.photocontainer {
+  width: 90%;
+  height: 1200px;
+  position: relative;
+  /* left:995px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
 }
-.foodphotos{
-    border:2px solid #e6e0e0;
-    background-color:#F7F7F7;
-    width:100%;
-    height: 220px;
-    margin:0 0 20px 0;
-      
+.foodphotos {
+  border: 2px solid #e6e0e0;
+  background-color: #f7f7f7;
+  width: 100%;
+  height: 220px;
+  margin: 0 0 20px 0;
 }
 
-.phototitle{
-    font-size: 25px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-style: italic;
-    margin-bottom: 10px;
-    margin-left: -83px;
+.phototitle {
+  font-size: 25px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-style: italic;
+  margin-bottom: 10px;
+  margin-left: -83px;
 }
-
-
