fix 2 tab issue and move some css to right files

--- a/main.css
+++ b/main.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+html, body {
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+
+
 .navContainer {
   display: flex;
   margin: 1% 10%;
@@ -65,12 +73,5 @@
   box-shadow: 0 0 15px  steelblue ; 
 }
 
-#tab-button button {
-  transition: box-shadow .3s;
-}
-
-#tab-button button:hover {
-  box-shadow: 0 0 15px #F4BB4B; 
-}
 
 
