--- a/tab-menu.css
+++ b/tab-menu.css
@@ -54,7 +54,8 @@
 }
 
 #menu-select button:focus{
-    border-bottom: 2px solid #d6d6d6e3;
+    border-bottom: 3px solid #ADACAD;
+    /* border-bottom: 2px solid #d6d6d6e3; */
 }
 
 
@@ -66,18 +67,19 @@
 }
 .price {
 
-    position: relative;
-    right: 5px;
+    text-align: right;
 }
-.description {
+/* .description {
     font-size: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
-}
+} */
 .desc{
 
     display:grid;
     grid-template-columns: 40em 5em;
+    font-size: 12px;
+
 }
 .name-price {
 
@@ -95,15 +97,21 @@
 }
 .dot {
     grid-column-start: 2;
-    text-align: center;
+    text-align:right;
 }
 
 #buttonCon-men{
-    width: 56%;
+    width: 100%;
 
 }
-.desc{
-    font-size: 12px;
-}
 
+/* .menu:focus #menu-appet {
+    border-bottom: 3px solid #ADACAD;
+
+} */
+/* #menu-appet {
+    border-bottom: 3px solid #ADACAD;
+
+
+} */
 
