--- a/cardlist.css
+++ b/cardlist.css
@@ -7,6 +7,7 @@
     border:3px solid rgb(252, 249, 249);
     margin: 0 auto;
     margin-bottom: 30px;
+    box-shadow: 0 0 20px steelblue ; 
 }
 
 .cardContainer{
