--- a/photos.css
+++ b/photos.css
@@ -15,6 +15,7 @@
     width:100%;
     height: 220px;
     margin:0 0 20px 0;
+    box-shadow: 10px 5px 10px  rgb(194, 196, 197) ; 
       
 }
 
@@ -23,7 +24,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-style: italic;
     margin-bottom: 10px;
-    margin-left: -83px;
+    margin-left: -156px;
 }
 
 
