--- a/Reservation.css
+++ b/Reservation.css
@@ -8,12 +8,20 @@ form {
   font-size: 18px;
   font-weight: bold;
   color: black;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri;
+
   /* border: 2px solid blue; */
 }
+form input {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri;
+  font-size: 15px;
 
+
+
+}
 #fullname {
   height: 35px;
-  width: 300px;
+  width: 350px;
   background-color: honeydew;
   border: 1px solid gray;
   margin-bottom: 10px;
@@ -57,4 +65,10 @@ form {
   text-align: center;
   font-size: 16px;
   border-radius: 5%;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
