--- a/tab-menu.css
+++ b/tab-menu.css
@@ -45,18 +45,17 @@
     background:none; 
     font-size:  15px;
     padding: 10px;
-    border-bottom: 0px;
+
+
 
 }
 
 #menu-select button:hover {
     cursor: pointer;
+    box-shadow: 0 0 15px #F4BB4B; 
+
 }
 
-#menu-select button:focus{
-    border-bottom: 3px solid #ADACAD;
-    /* border-bottom: 2px solid #d6d6d6e3; */
-}
 
 
 .name{
@@ -68,23 +67,25 @@
 .price {
 
     text-align: right;
+    font-size: 18px;
 }
-/* .description {
-    font-size: 10px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
-} */
 .desc{
 
     display:grid;
-    grid-template-columns: 40em 5em;
-    font-size: 12px;
+    grid-template-columns: 50em 5em;
+    font-size: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri;
+
 
 }
+
+
 .name-price {
 
     display:grid;
     grid-template-columns: 22em auto 5em;
+    padding-top: 10px;
 
 }
 .name {
@@ -105,17 +106,25 @@
 
 }
 
-#tab-button #story{
+#menu-select{
     border-bottom: 3px solid #ADACAD;
 
 }
-/* .menu:focus #menu-appet {
-    border-bottom: 3px solid #ADACAD;
+#menu{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top : 10px;
+    margin-bottom : 10px; 
 
-} */
- /* #menu-appet {
-    border-bottom: 3px solid #ADACAD;
+}
+.menu-Con {
+    line-height: 2;
+}
 
+.desc-din{
+    font-size: 1px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri;
+    display:grid;
+    grid-template-columns: 50em 5em;
 
-}  */
-
+}
