--- a/tab-menu.css
+++ b/tab-menu.css
@@ -115,19 +115,22 @@
 .desc-note-din {
   display: grid;
   grid-template-columns: 35em 15em;
-  text-overflow: ellipsis;
-  overflow: hidden;
 }
 
 
 #note {
   grid-column-start: 2;
   text-align: right;
+  position: inherit;
+  margin-left: 60px;
+
 }
 #note-din {
   grid-column-start: 2;
   text-align: right;
   margin-left: 60px;
+  position:inherit;
+
 }
 
 #spicy img {
@@ -149,3 +152,21 @@
   display: block;
   color: red;
 }
+
+.info:hover:after{
+    /* display: -webkit-flex; */
+    display: flex;
+    /* -webkit-justify-content: center; */
+    justify-content: center;
+    background: #444;
+    border-radius: 5px;
+    color: #fff;
+    content: attr(title);
+    /* margin: -70px auto 0; */
+    margin: -70px 0 0 0;
+
+    font-size: 12px;
+    padding: 10px;
+    width: 120px;
+  }
+
