--- a/tab-menu.css
+++ b/tab-menu.css
@@ -121,7 +121,7 @@
 #note {
   grid-column-start: 2;
   text-align: right;
-  position: inherit;
+  position: relative;
   margin-left: 60px;
 
 }
@@ -129,7 +129,7 @@
   grid-column-start: 2;
   text-align: right;
   margin-left: 60px;
-  position:inherit;
+  position: relative;;
 
 }
 
@@ -144,29 +144,19 @@
   color: #000000;
 }
 
-.hidenote {
-  display: none;
-}
-
-#note-din:hover + .hidenote {
-  display: block;
-  color: red;
-}
 
 .info:hover:after{
-    /* display: -webkit-flex; */
     display: flex;
-    /* -webkit-justify-content: center; */
     justify-content: center;
-    background: #444;
+    background: rgb(117, 116, 116);
     border-radius: 5px;
     color: #fff;
     content: attr(title);
-    /* margin: -70px auto 0; */
     margin: -70px 0 0 0;
-
+    position: absolute;
     font-size: 12px;
     padding: 10px;
     width: 120px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
