--- a/tab-menu.css
+++ b/tab-menu.css
@@ -18,6 +18,7 @@
   box-shadow: 0 0 15px #f4bb4b;
 }
 #tab-button {
+  width: 39%;
   border-top: 1px solid rgb(199, 196, 196);
 
   border-bottom: 1px solid rgb(199, 196, 196);
